--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -9,23 +9,20 @@
   <ItemGroup>
     <Compile Remove="Business\Request\**" />
     <Compile Remove="Business\Service\**" />
-    <Compile Remove="Logging\**" />
     <Compile Remove="Middleware\**" />
     <Content Remove="Business\Request\**" />
     <Content Remove="Business\Service\**" />
-    <Content Remove="Logging\**" />
     <Content Remove="Middleware\**" />
     <EmbeddedResource Remove="Business\Request\**" />
     <EmbeddedResource Remove="Business\Service\**" />
-    <EmbeddedResource Remove="Logging\**" />
     <EmbeddedResource Remove="Middleware\**" />
     <None Remove="Business\Request\**" />
     <None Remove="Business\Service\**" />
-    <None Remove="Logging\**" />
     <None Remove="Middleware\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\OrderController.cs" />
     <Compile Remove="Mapping\CarMapping.cs" />
   </ItemGroup>
 
